<resources>
    <string name="Solving_Chem_Equ">Решение химических уравнений</string>
    <string name="OVR">ОВР</string>
    <string name="Molar_Weight">Молярная масса</string>
    <string name="Elec_Config_El">Электронная конфигурация элементов</string>
    <string name="Hydrolysis">Гидролиз</string>
    <string name="Chem_Equ">Химическое равновесие</string>
    <string name="Reaction_Exchange_inSolution_Elec">Реакция обмена в равстворах электролитов</string>
    <string name="Theory">Теория</string>
    <string name="About">About</string>
    <string name="Camera">Camera</string>
    <string name="Solution">Растворы</string>

    <string name="Pandora">Pandora</string>
    <string name="gmail">pandora@gmal.com</string>
    <string name="app_name">Chemistry</string>
    <string name="enter">enter</string>
    <string name="wipe">wipe</string>
    <string name="Setting">Setting</string>
    <string name="Support">Support</string>
    <string name="enter_salt">Введите соль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chemTable1">H - 1 \t\tO - 2 \t\tLi - 3 \t\tNa - 4 \t\tAg - 5 \t\tK - 6</string>
    <string name="chemTable2">Ca - 7 \t\tCu - 8 \t\tMg - 9 \t\tMn - 10 \tAl - 11 \tNH4 - 12</string>
    <string name="chemTable3">OH - 13 \tCl - 14 \tNO3 - 15 \tSO4 - 16 \tSiO3 - 17 \tPO4 - 18</string>
    <string name="reaction_senselessly">Реакция бессмысленна</string>
    <string name="well_reaction">Вещества отлично будут реагировать</string>
    <string name="strong_electrolyte">Сильный электролит</string>
    <string name="weak_electrolyte">Слабый электролит</string>
    <string-array name="spinner">
        <item>Присоединение</item>
        <item>Разложение</item>
        <item>Замещение</item>
        <item>Обмен</item>
    </string-array>

    <string name="large_text">
        Pandora - это приложение созданное в помощи студентов с химие когда им лень.\n\n

        Это приложение содержит уникальный код который решает химические уравнеие, и дает дополнительные данные.
        Также здесь содержатся раздел с овр и гидролизом, которые спасут вас от унылой траты времени.\n\n

        Это приложение не содержит рекламы и стремится к развитию.\n
        А теперь я заполню эту вкладку ерундой, дабы проверить как работает scroll\n\n

        Ещё в древнейшие времена природная окись урана использовалась для изготовления жёлтой посуды.
        Так, возле Неаполя найден осколок жёлтого стекла, содержащий 1 % оксида урана и датируемый
        79 годом н. э.[6] Первая важная дата в истории урана — 1789 год, когда немецкий натурфилософ
        и химик Мартин Генрих Клапрот восстановил извлечённую из саксонской руды настурана
        золотисто-жёлтую «землю» до чёрного металлоподобного вещества. В честь самой далёкой из
        известных тогда планет (открытой Гершелем восемью годами раньше) Клапрот, считая новое
        вещество элементом, назвал его ураном (этим он хотел поддержать предложение Иоганна Боде
        назвать новую планету «Уран» вместо «Звезда Георга», как предложил Гершель). Пятьдесят лет
        уран Клапрота числился металлом. Только в 1841 году французский химик
        Эжен Пелиго (1811—1890) доказал, что, несмотря на характерный металлический блеск,
        уран Клапрота не элемент, а оксид UO2. В 1840 году Пелиго удалось получить простое
        вещество уран — тяжёлый металл серо-стального цвета — и определить его атомный вес.
        Следующий важный шаг в изучении урана сделал в 1874 году Д. И. Менделеев. Опираясь на
        разработанную им периодическую систему, он поместил уран в самой дальней клетке своей
        таблицы. Прежде атомный вес урана считали равным 120. Менделеев удвоил это значение.
        Через 12 лет его предвидение было подтверждено опытами немецкого химика Циммермана.\n\n

        В 1804 году немецкий химик Адольф Гелен открыл светочувствительность раствора хлорида
        уранила в эфире[8]; это свойство французский изобретатель Абель Ньепс де Сен-Виктор в
        1857 году пытался использовать в фотографии, однако обнаружил, что соли урана испускают
        некое невидимое излучение, экспонирующее светочувствительные материалы; на тот момент
        это наблюдение осталось незамеченным.\n\n

        Основными формами нахождений урана в природе являются уранинит, настуран (урановая смолка)
        и урановые черни. Они отличаются только формами нахождения; имеется возрастная зависимость:
        уранинит присутствует преимущественно в древних (докембрийских) породах,
        настуран — вулканогенный и гидротермальный — преимущественно в палеозойских и более молодых
        высоко- и среднетемпературных образованиях; урановые черни — в основном в
        молодых — кайнозойских и моложе — образованиях преимущественно в низкотемпературных
        осадочных породах.\n\n

        Тепловыделяющая способность урана\n
        Полное использование заключённой в уране потенциальной энергии пока технически невозможно.
        Величина выделившейся в ядерном реакторе полезной энергии урана характеризуется понятием
        глубины выгорания. Глубина выгорания — это суммарная энергия, отданная килограммом урана
        за все время работы в реакторе, от свежего топлива до утилизации. Измеряют глубину
        выгорания обычно в таких единицах как мегаватт-часы выделившейся тепловой энергии на
        килограмм топлива (МВт·час/кг). Иногда её приводят в пересчёте к реакторному урану того
        обогащения, которое загружается в реактор, не учитывая обеднённый уран в отвалах
        обогатительных производств, а иногда в пересчёте на природный уран.\n\n
    </string>
</resources>